@@ -67,6 +67,7 @@ func (s *Server) setupRouter() {
 	r.HandleFunc("/newFeedback", responder(s.newFeedback))
 	r.HandleFunc("/assignGlobalModerator", responder(s.assignGlobalModerator))
 	r.HandleFunc("/assignAdmin", responder(s.assignAdmin))
+	r.HandleFunc("/viewCommentReports", responder(s.viewCommentReports))
 
 	s.httpServer.Handler = s.router
 	s.router = r
